
resource_src = files(
    'animation.c',
    'bgm.c',
    'font.c',
    'material.c',
    'model.c',
    'postprocess.c',
    'resource.c',
    'sfx.c',
    'sfxbgm_common.c',
    'shader_object.c',
    'shader_program.c',
    'sprite.c',
    'texture.c',
)

subdir('texture_loader')
resource_src += resource_texload_src

subdir('iqm_loader')
resource_src += resource_iqmload_src
